--- a/pom.xml
+++ b/pom.xml
@@ -4,6 +4,18 @@
   <groupId>org.example</groupId>
   <artifactId>parser</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <properties>
+    <maven.compiler.source>19</maven.compiler.source>
+    <maven.compiler.target>19</maven.compiler.target>
+  </properties>
   <name>Archetype - parser</name>
   <url>http://maven.apache.org</url>
+
+  <dependencies>
+    <dependency>
+      <groupId>org.jsoup</groupId>
+      <artifactId>jsoup</artifactId>
+      <version>1.15.4</version>
+    </dependency>
+  </dependencies>
 </project>
